fixing detail page display on mobile

--- a/stylesd.css
+++ b/stylesd.css
@@ -82,9 +82,9 @@
     text-align: center;
   }
 
- @media screen {
+ @media only screen and (max-width:450px) {
   .navbar{
-    margin: 20px 20px 0px;
+    margin: 50px 20px 0px;
     position: static;
     font-size: 20px;
   }
